--- a/pages/index.html
+++ b/pages/index.html
@@ -8,10 +8,102 @@
   </head>
   <body>
     <%- include('./layout/header'); -%>
-
-    <h1 class="index-title">我是首頁</h1>
-    <img src="../assets/images/dog.jpg" style="width: 300px;" alt="cat">
-
+    <div class="buy">
+      <div class="buyText">
+        <h2 class="font-64">URBNSTEP</h2>
+        <p class="font-28 mb-48">Your Step, Your Statement</p>
+        <a class="btn-12" href="#">立即選購</a>
+      </div>
+      <img src="/assets/images/banner.png" alt="首頁圖">
+    </div>
+    <div class="New">
+      <div class="text-center">
+        <h3>New Arrival</h3>
+        <p>新品上市</p>
+      </div>
+      <ul>
+        <li>
+          <a href="#"><img src="../assets/images/new-1.png" alt="新品上市1"></a>
+          <h4>Monoverse</h4>
+          <p>NT$3,600</p>
+        </li>
+        <li>
+          <a href="#"><img src="../assets/images/new-2.png" alt="新品上市2"></a>
+          <h4>PLATFORM 404</h4>
+          <p>NT$2,600</p>
+        </li>
+        <li>
+          <a href="#"><img src="../assets/images/new-3.png" alt="新品上市3"></a>
+          <h4>URBN Force</h4>
+          <p>NT$3,200</p>
+        </li>
+        <li>
+          <a href="#"><img src="../assets/images/new-4.png" alt="新品上市4"></a>
+          <h4>Mode90</h4>
+          <p>NT$4,000</p>
+        </li>
+      </ul>
+    </div>
+    <div class="hotSale">
+      <h5>熱銷補貨</h5>
+      <ul>
+        <li>
+          <p>人氣 No.1</p>
+          <a href="#"><img src="/assets/images/product-3.png" alt="花"></a>
+        </li>
+        <li>
+          <p>人氣 No.1</p>
+          <a href="#"><img src="/assets/images/product.png" alt="藍"></a>
+        </li>
+        <li>
+          <p>人氣 No.1</p>
+          <a href="#"><img src="/assets/images/product-6.png" alt="淺咖啡"></a>
+        </li>
+        <li>
+          <p>人氣 No.1</p>
+          <a href="#"><img src="/assets/images/product-4.png" alt="白"></a>
+        </li>
+      </ul>
+    </div>
+    <div>
+    </div>
+    <div class="series">
+      <h5>依系列選購</h5>
+      <ul>
+        <li>
+          <div class="seriesText">
+            <h6>URBN RUNNER</h6>
+            <p>慢跑系列</p>
+          </div>
+          <a href="#"><img src="/assets/images/product-6.png" alt="慢跑系列"></a>
+        </li>
+        <li>
+          <div class="seriesText">
+            <h6>STREET MODE</h6>
+            <p>滑板系列</p>           
+          </div>
+          <a href="#"><img src="/assets/images/product-11.png" alt="滑板系列"></a>
+        </li>
+        <li>
+          <div class="seriesText">
+            <h6>CHUNK DISTRICT</h6>
+            <p>厚底系列</p>            
+          </div>
+          <a href="#"><img src="/assets/images/product-4.png" alt="厚底系列"></a>
+        </li>
+        <li>
+          <div class="seriesText">
+            <h6>COLLAB ZONE</h6>
+            <p>聯名企劃</p>            
+          </div>
+          <a href="#"><img src="/assets/images/product-10.png" alt="聯名計畫"></a>
+        </li>
+      </ul>
+    </div>
+    <div class="discount d-flex gap-40 align-center">
+      <p>加入會員取得 9 折優惠</p>
+      <a class="btn-12" href="#">馬上註冊</a>
+    </div>
     <%- include('./layout/footer'); -%>
 
     <script type="module" src="../main.js"></script>
