--- a/MyCollection.html
+++ b/MyCollection.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>MyCollection</title>
 </head>
 <body>
     <div class="header d-flex m0-auto justify-between">
@@ -28,7 +28,7 @@
         </div>
         <ul class="ItemList">
             <li>
-                <img src="/web-layout-training-vite/assets/product-ByIiOSCa.png" alt="藍">
+                <img src="/Week4/assets/product-ByIiOSCa.png" alt="藍">
                 <div>
                     <h3>PLATFORM 404</h3>
                     <p>尺寸38</p>
@@ -37,7 +37,7 @@
                 </div>
             </li>
             <li>
-                <img src="/web-layout-training-vite/assets/product-4-CqyUCYzf.png" alt="白">
+                <img src="/Week4/assets/product-4-CqyUCYzf.png" alt="白">
                 <div>
                     <h3>BOOMLOK</h3>
                     <p>尺寸38</p>
@@ -46,7 +46,7 @@
                 </div>
             </li>
             <li>
-                <img src="/web-layout-training-vite/assets/product-3-AxvEbKOW.png" alt="花">
+                <img src="/Week4/assets/product-3-AxvEbKOW.png" alt="花">
                 <div>
                     <h3>MELTY KISS</h3>
                     <p>尺寸38</p>
