--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>index</title>
-    <script type="module" crossorigin src="/web-layout-training-vite/assets/main-GK1emtWJ.js"></script>
-    <link rel="stylesheet" crossorigin href="/web-layout-training-vite/assets/main-yUMs5A8L.css">
+    <script type="module" crossorigin src="/Week4/assets/main-GK1emtWJ.js"></script>
+    <link rel="stylesheet" crossorigin href="/Week4/assets/main-yUMs5A8L.css">
   </head>
   <body>
     <div class="header d-flex m0-auto justify-between">
@@ -21,13 +21,14 @@
         </ul>
     </div>
     <a href="#"><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-person" viewBox="0 0 16 16"><path d="M8 8a3 3 0 1 0 0-6 3 3 0 0 0 0 6m2-3a2 2 0 1 1-4 0 2 2 0 0 1 4 0m4 8c0 1-1 1-1 1H3s-1 0-1-1 1-4 6-4 6 3 6 4m-1-.004c-.001-.246-.154-.986-.832-1.664C11.516 10.68 10.289 10 8 10s-3.516.68-4.168 1.332c-.678.678-.83 1.418-.832 1.664z"/></svg></a>
-</div>    <div class="buy">
+</div>    <a href="MyCollection.html">123</a>
+    <div class="buy">
       <div class="buyText">
         <h2 class="font-64">URBNSTEP</h2>
         <p class="font-28 mb-48">Your Step, Your Statement</p>
         <a class="btn-12" href="#">立即選購</a>
       </div>
-      <img src="/web-layout-training-vite/assets/banner-DI6JVJ4R.png" alt="首頁圖">
+      <img src="/Week4/assets/banner-DI6JVJ4R.png" alt="首頁圖">
     </div>
     <div class="New">
       <div class="text-center">
@@ -36,22 +37,22 @@
       </div>
       <ul>
         <li>
-          <a href="#"><img src="/web-layout-training-vite/assets/new-1-DFuFJpu2.png" alt="新品上市1"></a>
+          <a href="#"><img src="/Week4/assets/new-1-DFuFJpu2.png" alt="新品上市1"></a>
           <h4>Monoverse</h4>
           <p>NT$3,600</p>
         </li>
         <li>
-          <a href="#"><img src="/web-layout-training-vite/assets/new-2-BCvgVdcV.png" alt="新品上市2"></a>
+          <a href="#"><img src="/Week4/assets/new-2-BCvgVdcV.png" alt="新品上市2"></a>
           <h4>PLATFORM 404</h4>
           <p>NT$2,600</p>
         </li>
         <li>
-          <a href="#"><img src="/web-layout-training-vite/assets/new-3-DlHP5xvf.png" alt="新品上市3"></a>
+          <a href="#"><img src="/Week4/assets/new-3-DlHP5xvf.png" alt="新品上市3"></a>
           <h4>URBN Force</h4>
           <p>NT$3,200</p>
         </li>
         <li>
-          <a href="#"><img src="/web-layout-training-vite/assets/new-4-1hP52Cz7.png" alt="新品上市4"></a>
+          <a href="#"><img src="/Week4/assets/new-4-1hP52Cz7.png" alt="新品上市4"></a>
           <h4>Mode90</h4>
           <p>NT$4,000</p>
         </li>
@@ -62,19 +63,19 @@
       <ul>
         <li>
           <p>人氣 No.1</p>
-          <a href="#"><img src="/web-layout-training-vite/assets/product-3-AxvEbKOW.png" alt="花"></a>
+          <a href="#"><img src="/Week4/assets/product-3-AxvEbKOW.png" alt="花"></a>
         </li>
         <li>
           <p>人氣 No.1</p>
-          <a href="#"><img src="/web-layout-training-vite/assets/product-ByIiOSCa.png" alt="藍"></a>
+          <a href="#"><img src="/Week4/assets/product-ByIiOSCa.png" alt="藍"></a>
         </li>
         <li>
           <p>人氣 No.1</p>
-          <a href="#"><img src="/web-layout-training-vite/assets/product-6-D5PaxBWx.png" alt="淺咖啡"></a>
+          <a href="#"><img src="/Week4/assets/product-6-D5PaxBWx.png" alt="淺咖啡"></a>
         </li>
         <li>
           <p>人氣 No.1</p>
-          <a href="#"><img src="/web-layout-training-vite/assets/product-4-CqyUCYzf.png" alt="白"></a>
+          <a href="#"><img src="/Week4/assets/product-4-CqyUCYzf.png" alt="白"></a>
         </li>
       </ul>
     </div>
@@ -88,28 +89,28 @@
             <h6>URBN RUNNER</h6>
             <p>慢跑系列</p>
           </div>
-          <a href="#"><img src="/web-layout-training-vite/assets/product-6-D5PaxBWx.png" alt="慢跑系列"></a>
+          <a href="#"><img src="/Week4/assets/product-6-D5PaxBWx.png" alt="慢跑系列"></a>
         </li>
         <li>
           <div class="seriesText">
             <h6>STREET MODE</h6>
             <p>滑板系列</p>           
           </div>
-          <a href="#"><img src="/web-layout-training-vite/assets/product-11-I2v_viJI.png" alt="滑板系列"></a>
+          <a href="#"><img src="/Week4/assets/product-11-I2v_viJI.png" alt="滑板系列"></a>
         </li>
         <li>
           <div class="seriesText">
             <h6>CHUNK DISTRICT</h6>
             <p>厚底系列</p>            
           </div>
-          <a href="#"><img src="/web-layout-training-vite/assets/product-4-CqyUCYzf.png" alt="厚底系列"></a>
+          <a href="#"><img src="/Week4/assets/product-4-CqyUCYzf.png" alt="厚底系列"></a>
         </li>
         <li>
           <div class="seriesText">
             <h6>COLLAB ZONE</h6>
             <p>聯名企劃</p>            
           </div>
-          <a href="#"><img src="/web-layout-training-vite/assets/product-10-DQrUQhEA.png" alt="聯名計畫"></a>
+          <a href="#"><img src="/Week4/assets/product-10-DQrUQhEA.png" alt="聯名計畫"></a>
         </li>
       </ul>
     </div>
