--- a/contact.html
+++ b/contact.html
@@ -5,8 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>contact</title>
-    <script type="module" crossorigin src="/Week4/assets/main-GK1emtWJ.js"></script>
-    <link rel="stylesheet" crossorigin href="/Week4/assets/main-yUMs5A8L.css">
+    <script type="module" crossorigin src="/Week4/assets/main-m8SDOmOQ.js"></script>
+    <link rel="stylesheet" crossorigin href="/Week4/assets/main-Bl4rWtaf.css">
   </head>
   <body>
     <div class="header d-flex m0-auto justify-between">
@@ -16,7 +16,7 @@
             <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-circle-fill" viewBox="0 0 16 16"><circle cx="8" cy="8" r="8"/></svg>
         </h1>
         <ul class="d-flex gap-40">
-            <li><a href="#">商品列表</a></li>
+            <li><a href="/pages/ItemList.html">商品列表</a></li>
             <li><a href="#">品牌故事</a></li>
         </ul>
     </div>
