--- a/ItemList.html
+++ b/ItemList.html
@@ -4,14 +4,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-  <script type="module" crossorigin src="/Week4/assets/main-m8SDOmOQ.js"></script>
-  <link rel="stylesheet" crossorigin href="/Week4/assets/main-Bl4rWtaf.css">
+  <script type="module" crossorigin src="/Week4/assets/main-5X-vvDwG.js"></script>
+  <link rel="stylesheet" crossorigin href="/Week4/assets/main-DM6vTkKf.css">
 </head>
 <body>
     <div class="header d-flex m0-auto justify-between">
     <div class="d-flex gap-48 align-center">
         <h1>
-            <a href="#">URBNSTEP</a>
+            <a href="/pages/index.html">URBNSTEP</a>
             <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-circle-fill" viewBox="0 0 16 16"><circle cx="8" cy="8" r="8"/></svg>
         </h1>
         <ul class="d-flex gap-40">
@@ -19,13 +19,92 @@
             <li><a href="#">品牌故事</a></li>
         </ul>
     </div>
-    <a href="#"><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-person" viewBox="0 0 16 16"><path d="M8 8a3 3 0 1 0 0-6 3 3 0 0 0 0 6m2-3a2 2 0 1 1-4 0 2 2 0 0 1 4 0m4 8c0 1-1 1-1 1H3s-1 0-1-1 1-4 6-4 6 3 6 4m-1-.004c-.001-.246-.154-.986-.832-1.664C11.516 10.68 10.289 10 8 10s-3.516.68-4.168 1.332c-.678.678-.83 1.418-.832 1.664z"/></svg></a>
-</div>    
-    <div class="footer">
+    <a href="/pages/login.html"><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-person" viewBox="0 0 16 16"><path d="M8 8a3 3 0 1 0 0-6 3 3 0 0 0 0 6m2-3a2 2 0 1 1-4 0 2 2 0 0 1 4 0m4 8c0 1-1 1-1 1H3s-1 0-1-1 1-4 6-4 6 3 6 4m-1-.004c-.001-.246-.154-.986-.832-1.664C11.516 10.68 10.289 10 8 10s-3.516.68-4.168 1.332c-.678.678-.83 1.418-.832 1.664z"/></svg></a>
+</div>    <div class="content">
+        <ul class="category">
+            <li><a href="#">首頁</a></li>
+            <li class="light">/</li>
+            <li><a href="#">女鞋</a></li>
+            <li class="light">/</li>
+            <li>所有商品</li>
+        </ul>
+        <h2>女鞋</h2>
+        <div class="Item">
+            <ul class="shoppingList">
+                <li><a href="#" class="all">所有商品</a></li>
+                <li><a href="#">慢跑鞋</a></li>
+                <li><a href="#">滑板鞋</a></li>
+                <li><a href="#">厚底鞋</a></li>
+                <li><a href="#">限定 / 聯名企劃</a></li>
+            </ul>
+            <div>
+                <ul class="card">
+                    <li>
+                        <a href="#"><img src="/Week4/assets/product-ByIiOSCa.png" alt="藍"></a>
+                        <h3>PLATFORM 404</h3>
+                        <p>NT$2,600</p>
+                    </li>
+                    <li>
+                        <a href="#"><img src="/Week4/assets/product-1-BSd-Oeai.png" alt="卡其"></a>
+                        <h3>PLATFORM 404</h3>
+                        <p>NT$2,600</p>
+                    </li>
+                    <li>
+                        <a href="#"><img src="/Week4/assets/product-2-B3VzoAng.png" alt="綠"></a>
+                        <h3>VM001</h3>
+                        <p>NT$2,600</p>
+                    </li>
+                    <li>
+                        <a href="#"><img src="/Week4/assets/product-3-AxvEbKOW.png" alt="花"></a>
+                        <h3>Melty Kiss</h3>
+                        <p>NT$4,000</p>
+                    </li>
+                    <li>
+                        <a href="#"><img src="/Week4/assets/product-4-CqyUCYzf.png" alt="白"></a>
+                        <h3>BOOMBLOK</h3>
+                        <p>NT$3,200</p>
+                    </li>
+                    <li>
+                        <a href="#"><img src="/Week4/assets/product-5-Crvwip2z.png" alt="青"></a>
+                        <h3>BOOMBLOK</h3>
+                        <p>NT$3,200</p>
+                    </li>
+                    <li>
+                        <a href="#"><img src="/Week4/assets/product-6-D5PaxBWx.png" alt="淺棕"></a>
+                        <h3>R:UNER</h3>
+                        <p>NT$4,000</p>
+                    </li>
+                    <li>
+                        <a href="#"><img src="/Week4/assets/product-7-DJXgZGzn.png" alt="黃"></a>
+                        <h3>Sugar Snap</h3>
+                        <p>NT$4,000</p>
+                    </li>
+                    <li>
+                        <a href="#"><img src="/Week4/assets/product-8-JQPwydt4.png" alt="淺綠"></a>
+                        <h3>Neofoam</h3>
+                        <p>NT$4,000</p>
+                    </li>
+                </ul>
+                <ul class="pages">
+                    <li><a href="#"><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-chevron-left" viewBox="0 0 16 16"><path fill-rule="evenodd" d="M11.354 1.646a.5.5 0 0 1 0 .708L5.707 8l5.647 5.646a.5.5 0 0 1-.708.708l-6-6a.5.5 0 0 1 0-.708l6-6a.5.5 0 0 1 .708 0"/></svg></a></li>
+                    <li><a href="#">1</a></li>
+                    <li><a href="#">2</a></li>
+                    <li><a href="#">3</a></li>
+                    <li><p>...</p></li>
+                    <li><a href="#">10</a></li>
+                    <li><a href="#"><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-chevron-right" viewBox="0 0 16 16"><path fill-rule="evenodd" d="M4.646 1.646a.5.5 0 0 1 .708 0l6 6a.5.5 0 0 1 0 .708l-6 6a.5.5 0 0 1-.708-.708L10.293 8 4.646 2.354a.5.5 0 0 1 0-.708"/></svg></a></li>
+                </ul>
+            </div>
+        </div>
+    </div>
+        <div class="discount d-flex gap-40 align-center">
+      <p>加入會員取得 9 折優惠</p>
+      <a class="btn-12" href="#">馬上註冊</a>
+    </div>    <div class="footer">
     <div class="footerList d-flex justify-between">
         <div>
            <h1>
-            <a href="#">URBNSTEP</a>
+            <a href="/pages/index.html">URBNSTEP</a>
             <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-circle-fill" viewBox="0 0 16 16"><circle cx="8" cy="8" r="8"/></svg>
             </h1> 
         </div>
