--- a/MyCollection.html
+++ b/MyCollection.html
@@ -4,14 +4,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>MyCollection</title>
-  <script type="module" crossorigin src="/Week4/assets/main-m8SDOmOQ.js"></script>
-  <link rel="stylesheet" crossorigin href="/Week4/assets/main-Bl4rWtaf.css">
+  <script type="module" crossorigin src="/Week4/assets/main-5X-vvDwG.js"></script>
+  <link rel="stylesheet" crossorigin href="/Week4/assets/main-DM6vTkKf.css">
 </head>
 <body>
     <div class="header d-flex m0-auto justify-between">
     <div class="d-flex gap-48 align-center">
         <h1>
-            <a href="#">URBNSTEP</a>
+            <a href="/pages/index.html">URBNSTEP</a>
             <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-circle-fill" viewBox="0 0 16 16"><circle cx="8" cy="8" r="8"/></svg>
         </h1>
         <ul class="d-flex gap-40">
@@ -19,58 +19,54 @@
             <li><a href="#">品牌故事</a></li>
         </ul>
     </div>
-    <a href="#"><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-person" viewBox="0 0 16 16"><path d="M8 8a3 3 0 1 0 0-6 3 3 0 0 0 0 6m2-3a2 2 0 1 1-4 0 2 2 0 0 1 4 0m4 8c0 1-1 1-1 1H3s-1 0-1-1 1-4 6-4 6 3 6 4m-1-.004c-.001-.246-.154-.986-.832-1.664C11.516 10.68 10.289 10 8 10s-3.516.68-4.168 1.332c-.678.678-.83 1.418-.832 1.664z"/></svg></a>
+    <a href="/pages/login.html"><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-person" viewBox="0 0 16 16"><path d="M8 8a3 3 0 1 0 0-6 3 3 0 0 0 0 6m2-3a2 2 0 1 1-4 0 2 2 0 0 1 4 0m4 8c0 1-1 1-1 1H3s-1 0-1-1 1-4 6-4 6 3 6 4m-1-.004c-.001-.246-.154-.986-.832-1.664C11.516 10.68 10.289 10 8 10s-3.516.68-4.168 1.332c-.678.678-.83 1.418-.832 1.664z"/></svg></a>
 </div>
-    <div class="content">
-        <div class="d-flex align-center gap-16">
-            <div>
-                <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-check-lg" viewBox="0 0 16 16"><path d="M12.736 3.97a.733.733 0 0 1 1.047 0c.286.289.29.756.01 1.05L7.88 12.01a.733.733 0 0 1-1.065.02L3.217 8.384a.757.757 0 0 1 0-1.06.733.733 0 0 1 1.047 0l3.052 3.093 5.4-6.425z"/></svg> 
-                <svg xmlns="http://www.w3.org/2000/svg" width="28" height="28" fill="currentColor" class="bi bi-circle-fill" viewBox="0 0 16 16"><circle cx="8" cy="8" r="8"/></svg>
-            </div>
-            <h2>我的收藏</h2> 
+    <div class="collect">
+        <div class="title">
+            <svg class="check" xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-check-lg" viewBox="0 0 16 16"><path d="M12.736 3.97a.733.733 0 0 1 1.047 0c.286.289.29.756.01 1.05L7.88 12.01a.733.733 0 0 1-1.065.02L3.217 8.384a.757.757 0 0 1 0-1.06.733.733 0 0 1 1.047 0l3.052 3.093 5.4-6.425z"/></svg>
+            <h2>我的收藏</h2>
         </div>
-        <div>
+        <div class="open">
+            <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-truck" viewBox="0 0 16 16"><path d="M0 3.5A1.5 1.5 0 0 1 1.5 2h9A1.5 1.5 0 0 1 12 3.5V5h1.02a1.5 1.5 0 0 1 1.17.563l1.481 1.85a1.5 1.5 0 0 1 .329.938V10.5a1.5 1.5 0 0 1-1.5 1.5H14a2 2 0 1 1-4 0H5a2 2 0 1 1-3.998-.085A1.5 1.5 0 0 1 0 10.5zm1.294 7.456A2 2 0 0 1 4.732 11h5.536a2 2 0 0 1 .732-.732V3.5a.5.5 0 0 0-.5-.5h-9a.5.5 0 0 0-.5.5v7a.5.5 0 0 0 .294.456M12 10a2 2 0 0 1 1.732 1h.768a.5.5 0 0 0 .5-.5V8.35a.5.5 0 0 0-.11-.312l-1.48-1.85A.5.5 0 0 0 13.02 6H12zm-9 1a1 1 0 1 0 0 2 1 1 0 0 0 0-2m9 0a1 1 0 1 0 0 2 1 1 0 0 0 0-2"/></svg>
             <p>門市營業時間：週一至週五 10:00 - 22:00</p>
         </div>
-        <ul class="ItemList">
+        <ul class="card">
             <li>
-                <img src="/Week4/assets/product-ByIiOSCa.png" alt="藍">
-                <div>
+                <a href="#"><img src="https://github.com/hexschool/2022-web-layout-training/blob/main/2025-week2/product.png?raw=true" alt="藍"></a>
+                <div class="feature">
                     <h3>PLATFORM 404</h3>
-                    <p>尺寸38</p>
-                    <p>顏色Navy</p>
-                    <p>NT$2,600</p>
+                    <p><span>尺寸</span>38</p>
+                    <p><span>顏色</span>Navy</p>
+                    <p class="price">NT$2,600</p>
                 </div>
             </li>
             <li>
-                <img src="/Week4/assets/product-4-CqyUCYzf.png" alt="白">
-                <div>
+                <a href="#"><img src="https://github.com/hexschool/2022-web-layout-training/blob/main/2025-week2/product-4.png?raw=true" alt="白"></a>
+                <div class="feature">
                     <h3>BOOMLOK</h3>
-                    <p>尺寸38</p>
-                    <p>顏色White</p>
-                    <p>NT$3,200</p>
+                    <p><span>尺寸</span>38</p>
+                    <p><span>顏色</span>White</p>
+                    <p class="price">NT$3,200</p>
                 </div>
             </li>
             <li>
-                <img src="/Week4/assets/product-3-AxvEbKOW.png" alt="花">
-                <div>
+                <a href="#"><img src="https://github.com/hexschool/2022-web-layout-training/blob/main/2025-week2/product-3.png?raw=true" alt="花"></a>
+                <div class="feature">
                     <h3>MELTY KISS</h3>
-                    <p>尺寸38</p>
-                    <p>顏色Violet</p>
-                    <p>NT$4,000</p>
+                    <p><span>尺寸</span>38</p>
+                    <p><span>顏色</span>Violet</p>
+                    <p class="price">NT$4,000</p>
                 </div>
             </li>
         </ul>
-        <div>
-            <a href="#">立即預約門市試穿</a>
-        </div>
+        <a href="#" class="reserve-btn">立即預約門市試穿</a>
     </div>
 
     <div class="footer">
     <div class="footerList d-flex justify-between">
         <div>
            <h1>
-            <a href="#">URBNSTEP</a>
+            <a href="/pages/index.html">URBNSTEP</a>
             <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-circle-fill" viewBox="0 0 16 16"><circle cx="8" cy="8" r="8"/></svg>
             </h1> 
         </div>
