--- a/contact.html
+++ b/contact.html
@@ -5,14 +5,14 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>contact</title>
-    <script type="module" crossorigin src="/Week4/assets/main-m8SDOmOQ.js"></script>
-    <link rel="stylesheet" crossorigin href="/Week4/assets/main-Bl4rWtaf.css">
+    <script type="module" crossorigin src="/Week4/assets/main-5X-vvDwG.js"></script>
+    <link rel="stylesheet" crossorigin href="/Week4/assets/main-DM6vTkKf.css">
   </head>
   <body>
     <div class="header d-flex m0-auto justify-between">
     <div class="d-flex gap-48 align-center">
         <h1>
-            <a href="#">URBNSTEP</a>
+            <a href="/pages/index.html">URBNSTEP</a>
             <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-circle-fill" viewBox="0 0 16 16"><circle cx="8" cy="8" r="8"/></svg>
         </h1>
         <ul class="d-flex gap-40">
@@ -20,13 +20,13 @@
             <li><a href="#">品牌故事</a></li>
         </ul>
     </div>
-    <a href="#"><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-person" viewBox="0 0 16 16"><path d="M8 8a3 3 0 1 0 0-6 3 3 0 0 0 0 6m2-3a2 2 0 1 1-4 0 2 2 0 0 1 4 0m4 8c0 1-1 1-1 1H3s-1 0-1-1 1-4 6-4 6 3 6 4m-1-.004c-.001-.246-.154-.986-.832-1.664C11.516 10.68 10.289 10 8 10s-3.516.68-4.168 1.332c-.678.678-.83 1.418-.832 1.664z"/></svg></a>
+    <a href="/pages/login.html"><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-person" viewBox="0 0 16 16"><path d="M8 8a3 3 0 1 0 0-6 3 3 0 0 0 0 6m2-3a2 2 0 1 1-4 0 2 2 0 0 1 4 0m4 8c0 1-1 1-1 1H3s-1 0-1-1 1-4 6-4 6 3 6 4m-1-.004c-.001-.246-.154-.986-.832-1.664C11.516 10.68 10.289 10 8 10s-3.516.68-4.168 1.332c-.678.678-.83 1.418-.832 1.664z"/></svg></a>
 </div>    <h1>我是contact</h1>
     <div class="footer">
     <div class="footerList d-flex justify-between">
         <div>
            <h1>
-            <a href="#">URBNSTEP</a>
+            <a href="/pages/index.html">URBNSTEP</a>
             <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-circle-fill" viewBox="0 0 16 16"><circle cx="8" cy="8" r="8"/></svg>
             </h1> 
         </div>
