--- a/about.html
+++ b/about.html
@@ -12,7 +12,7 @@
     <div class="header d-flex m0-auto justify-between">
     <div class="d-flex gap-48 align-center">
         <h1>
-            <a href="/pages/index.html">URBNSTEP</a>
+            <a href="index.html">URBNSTEP</a>
             <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-circle-fill" viewBox="0 0 16 16"><circle cx="8" cy="8" r="8"/></svg>
         </h1>
         <ul class="d-flex gap-40">
