--- a/ItemList.html
+++ b/ItemList.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-  <script type="module" crossorigin src="/Week4/assets/main-5X-vvDwG.js"></script>
-  <link rel="stylesheet" crossorigin href="/Week4/assets/main-DM6vTkKf.css">
+  <script type="module" crossorigin src="/Week4/assets/main-BXyz8bz9.js"></script>
+  <link rel="stylesheet" crossorigin href="/Week4/assets/main-mjZYIlgq.css">
 </head>
 <body>
     <div class="header d-flex m0-auto justify-between">
@@ -40,7 +40,7 @@
             <div>
                 <ul class="card">
                     <li>
-                        <a href="#"><img src="/Week4/assets/product-ByIiOSCa.png" alt="藍"></a>
+                        <a href="ItemDetail.html"><img src="/Week4/assets/product-ByIiOSCa.png" alt="藍"></a>
                         <h3>PLATFORM 404</h3>
                         <p>NT$2,600</p>
                     </li>
