--- a/MyCollection.html
+++ b/MyCollection.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>MyCollection</title>
-  <script type="module" crossorigin src="/Week4/assets/main-BXyz8bz9.js"></script>
-  <link rel="stylesheet" crossorigin href="/Week4/assets/main-mjZYIlgq.css">
+  <script type="module" crossorigin src="/Week4/assets/main-DAUtTcb2.js"></script>
+  <link rel="stylesheet" crossorigin href="/Week4/assets/main-Djum0Hut.css">
 </head>
 <body>
     <div class="header d-flex m0-auto justify-between">
@@ -23,14 +23,17 @@
 </div>
     <div class="collect">
         <div class="title">
-            <svg class="check" xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-check-lg" viewBox="0 0 16 16"><path d="M12.736 3.97a.733.733 0 0 1 1.047 0c.286.289.29.756.01 1.05L7.88 12.01a.733.733 0 0 1-1.065.02L3.217 8.384a.757.757 0 0 1 0-1.06.733.733 0 0 1 1.047 0l3.052 3.093 5.4-6.425z"/></svg>
+            <div>
+               <p class="check"></p>
+               <img src="data:image/svg+xml,%3csvg%20xmlns='http://www.w3.org/2000/svg'%20width='16'%20height='16'%20fill='currentColor'%20class='bi%20bi-check-lg'%20viewBox='0%200%2016%2016'%3e%3cpath%20d='M12.736%203.97a.733.733%200%200%201%201.047%200c.286.289.29.756.01%201.05L7.88%2012.01a.733.733%200%200%201-1.065.02L3.217%208.384a.757.757%200%200%201%200-1.06.733.733%200%200%201%201.047%200l3.052%203.093%205.4-6.425z'/%3e%3c/svg%3e" alt="">
+            </div>
             <h2>我的收藏</h2>
         </div>
         <div class="open">
             <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-truck" viewBox="0 0 16 16"><path d="M0 3.5A1.5 1.5 0 0 1 1.5 2h9A1.5 1.5 0 0 1 12 3.5V5h1.02a1.5 1.5 0 0 1 1.17.563l1.481 1.85a1.5 1.5 0 0 1 .329.938V10.5a1.5 1.5 0 0 1-1.5 1.5H14a2 2 0 1 1-4 0H5a2 2 0 1 1-3.998-.085A1.5 1.5 0 0 1 0 10.5zm1.294 7.456A2 2 0 0 1 4.732 11h5.536a2 2 0 0 1 .732-.732V3.5a.5.5 0 0 0-.5-.5h-9a.5.5 0 0 0-.5.5v7a.5.5 0 0 0 .294.456M12 10a2 2 0 0 1 1.732 1h.768a.5.5 0 0 0 .5-.5V8.35a.5.5 0 0 0-.11-.312l-1.48-1.85A.5.5 0 0 0 13.02 6H12zm-9 1a1 1 0 1 0 0 2 1 1 0 0 0 0-2m9 0a1 1 0 1 0 0 2 1 1 0 0 0 0-2"/></svg>
             <p>門市營業時間：週一至週五 10:00 - 22:00</p>
         </div>
-        <ul class="card">
+        <ul class="card-collect">
             <li>
                 <a href="#"><img src="https://github.com/hexschool/2022-web-layout-training/blob/main/2025-week2/product.png?raw=true" alt="藍"></a>
                 <div class="feature">
@@ -66,12 +69,12 @@
     <div class="footerList d-flex justify-between">
         <div>
            <h1>
-            <a href="/pages/index.html">URBNSTEP</a>
+            <a href="index.html">URBNSTEP</a>
             <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-circle-fill" viewBox="0 0 16 16"><circle cx="8" cy="8" r="8"/></svg>
             </h1> 
         </div>
         <ul class="d-flex gap-40">
-            <li><a href="#">商品列表</a></li>
+            <li><a href="ItemList.html">商品列表</a></li>
             <li><a href="#">品牌故事</a></li>
         </ul>
     </div>
