--- a/login.html
+++ b/login.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-  <script type="module" crossorigin src="/Week4/assets/main-BXyz8bz9.js"></script>
-  <link rel="stylesheet" crossorigin href="/Week4/assets/main-mjZYIlgq.css">
+  <script type="module" crossorigin src="/Week4/assets/main-DAUtTcb2.js"></script>
+  <link rel="stylesheet" crossorigin href="/Week4/assets/main-Djum0Hut.css">
 </head>
 <body>
     <div class="header d-flex m0-auto justify-between">
@@ -59,12 +59,12 @@
     <div class="footerList d-flex justify-between">
         <div>
            <h1>
-            <a href="/pages/index.html">URBNSTEP</a>
+            <a href="index.html">URBNSTEP</a>
             <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-circle-fill" viewBox="0 0 16 16"><circle cx="8" cy="8" r="8"/></svg>
             </h1> 
         </div>
         <ul class="d-flex gap-40">
-            <li><a href="#">商品列表</a></li>
+            <li><a href="ItemList.html">商品列表</a></li>
             <li><a href="#">品牌故事</a></li>
         </ul>
     </div>
