--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>index</title>
-    <script type="module" crossorigin src="/Week4/assets/main-BXyz8bz9.js"></script>
-    <link rel="stylesheet" crossorigin href="/Week4/assets/main-mjZYIlgq.css">
+    <script type="module" crossorigin src="/Week4/assets/main-DAUtTcb2.js"></script>
+    <link rel="stylesheet" crossorigin href="/Week4/assets/main-Djum0Hut.css">
   </head>
   <body>
     <div class="header d-flex m0-auto justify-between">
@@ -21,14 +21,16 @@
         </ul>
     </div>
     <a href="login.html"><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-person" viewBox="0 0 16 16"><path d="M8 8a3 3 0 1 0 0-6 3 3 0 0 0 0 6m2-3a2 2 0 1 1-4 0 2 2 0 0 1 4 0m4 8c0 1-1 1-1 1H3s-1 0-1-1 1-4 6-4 6 3 6 4m-1-.004c-.001-.246-.154-.986-.832-1.664C11.516 10.68 10.289 10 8 10s-3.516.68-4.168 1.332c-.678.678-.83 1.418-.832 1.664z"/></svg></a>
-</div>    <a href="ItemDetail.html">123</a>
-    <div class="buy">
+</div>    <div class="buy">
       <div class="buyText">
         <h2 class="font-64">URBNSTEP</h2>
         <p class="font-28 mb-48">Your Step, Your Statement</p>
         <a class="btn-12" href="#">立即選購</a>
       </div>
-      <img src="/Week4/assets/banner-DI6JVJ4R.png" alt="首頁圖">
+      <picture>
+        <source srcset="https://github.com/hexschool/2022-web-layout-training/blob/main/2025-week3-4/banner-sm.png?raw=true" media="(max-width: 768px)">
+        <img src="/Week4/assets/banner-DI6JVJ4R.png" alt="首頁圖" >
+      </picture>
     </div>
     <div class="New">
       <div class="text-center">
@@ -81,6 +83,18 @@
     </div>
     <div>
     </div>
+    <div class="co-branding">
+        <div class="text">
+            <h5>URBNSTEP x Kevin Chen</h5>
+            <h6>跨界聯名，限量發售<h6>
+            <p>新銳漫畫家 Kevin Chen 親自操刀設計，街頭能量全面引爆！</p>
+            <a href="#">立即搶購</a>
+        </div>
+        <picture>
+            <source srcset="https://github.com/hexschool/2022-web-layout-training/blob/main/2025-week3-4/banner-co-branded-sm.png?raw=true" media="(max-width: 768px)">
+            <img src="https://github.com/hexschool/2022-web-layout-training/blob/main/2025-week3-4/banner-co-branded.png?raw=true" alt="主圖片">  
+        </picture>
+    </div>
     <div class="series">
       <h5>依系列選購</h5>
       <ul>
@@ -114,6 +128,34 @@
         </li>
       </ul>
     </div>
+    <div class="inspiration">
+        <h5>穿搭靈感</h5>
+        <div class="model">
+            <div class="inspirationLeft">
+                <div>
+                    <img src="https://github.com/hexschool/2022-web-layout-training/blob/main/2025-week3-4/inspiration-1.png?raw=true" class="small-pic" alt="穿搭靈感1">
+                    <img src="https://github.com/hexschool/2022-web-layout-training/blob/main/2025-week3-4/inspiration-2.png?raw=true" class="small-pic" alt="穿搭靈感2">
+                </div>
+                <img src="https://github.com/hexschool/2022-web-layout-training/blob/main/2025-week3-4/inspiration-3.png?raw=true" class="large-pic" alt="穿搭靈感3">
+            </div>
+            <div class="inspirationMiddle">
+                <img src="https://github.com/hexschool/2022-web-layout-training/blob/main/2025-week3-4/inspiration-4.png?raw=true" class="small-pic" alt="穿搭靈感4">
+                <img src="https://github.com/hexschool/2022-web-layout-training/blob/main/2025-week3-4/inspiration-5.png?raw=true" class="small-pic" alt="穿搭靈感5">
+                <img src="https://github.com/hexschool/2022-web-layout-training/blob/main/2025-week3-4/inspiration-6.png?raw=true" class="small-pic" alt="穿搭靈感6">
+                <img src="https://github.com/hexschool/2022-web-layout-training/blob/main/2025-week3-4/inspiration-7.png?raw=true" class="small-pic" alt="穿搭靈感7">
+                <img src="https://github.com/hexschool/2022-web-layout-training/blob/main/2025-week3-4/inspiration-8.png?raw=true" class="small-pic" alt="穿搭靈感8">
+                <img src="https://github.com/hexschool/2022-web-layout-training/blob/main/2025-week3-4/inspiration-9.png?raw=true" class="small-pic" alt="穿搭靈感9">
+            </div>
+            <div class="inspirationRight">
+                <img src="https://github.com/hexschool/2022-web-layout-training/blob/main/2025-week3-4/inspiration-10.png?raw=true" class="large-pic" alt="穿搭靈感10">
+                <div>
+                    <img src="https://github.com/hexschool/2022-web-layout-training/blob/main/2025-week3-4/inspiration-11.png?raw=true" class="small-pic" alt="穿搭靈感11">
+                    <img src="https://github.com/hexschool/2022-web-layout-training/blob/main/2025-week3-4/inspiration-12.png?raw=true" class="small-pic" alt="穿搭靈感12">
+                </div>
+            </div>
+        </div>
+        <img src="https://github.com/hexschool/2022-web-layout-training/blob/main/2025-week3-4/inspiration-1.png?raw=true" class="mobile-model" alt="穿搭靈感1">
+    </div>
         <div class="discount d-flex gap-40 align-center">
       <p>加入會員取得 9 折優惠</p>
       <a class="btn-12" href="#">馬上註冊</a>
@@ -121,12 +163,12 @@
     <div class="footerList d-flex justify-between">
         <div>
            <h1>
-            <a href="/pages/index.html">URBNSTEP</a>
+            <a href="index.html">URBNSTEP</a>
             <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-circle-fill" viewBox="0 0 16 16"><circle cx="8" cy="8" r="8"/></svg>
             </h1> 
         </div>
         <ul class="d-flex gap-40">
-            <li><a href="#">商品列表</a></li>
+            <li><a href="ItemList.html">商品列表</a></li>
             <li><a href="#">品牌故事</a></li>
         </ul>
     </div>
