--- a/ItemDetail.html
+++ b/ItemDetail.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-  <script type="module" crossorigin src="/Week4/assets/main-DAUtTcb2.js"></script>
-  <link rel="stylesheet" crossorigin href="/Week4/assets/main-Djum0Hut.css">
+  <script type="module" crossorigin src="/Week4/assets/main-C8IkeOsI.js"></script>
+  <link rel="stylesheet" crossorigin href="/Week4/assets/main-BDTBR-UE.css">
 </head>
 <body>
     <div class="header d-flex m0-auto justify-between">
@@ -36,7 +36,7 @@
         <img src="/Week4/assets/image-gISZDASy.png" class="mobile-pic" alt="">
         <div class="ItemDetail-content-r">
             <div>
-                <ul class="category">
+                <ul class="Item-category">
                     <li><a href="#">首頁</a></li>
                     <li class="divide">/</li>
                     <li><a href="#">女鞋</a></li>
