--- a/register.html
+++ b/register.html
@@ -29,27 +29,27 @@
         </div>
         <div class="login-r">
             <h2>歡迎！</h2>
-            <ul class="login-select">
-                <li class="select-l"><a href="#">登入</a></li>
-                <li class="select-r"><a href="register.html">註冊</a></li>
+            <ul class="register-select">
+                <li class="select-l"><a href="login.html">登入</a></li>
+                <li class="select-r"><a href="#">註冊</a></li>
             </ul>
-            <ul class="account">
+            <ul class="register">
                 <li>
                     <a href="#">
                         <img src="https://raw.githubusercontent.com/hexschool/2022-web-layout-training/6d666caf369e2de99b649ce9fc967d13e36f30b5/2025-week3-4/facebook.svg" alt="Facebook">
-                        <p>Facebook 登入</p>
+                        <p>Facebook 註冊</p>
                     </a>
                 </li>
                 <li>
                     <a href="#">
                         <img src="https://raw.githubusercontent.com/hexschool/2022-web-layout-training/6d666caf369e2de99b649ce9fc967d13e36f30b5/2025-week3-4/apple.svg" alt="Apple">
-                        <p>Apple 登入</p>
+                        <p>Apple 註冊</p>
                     </a>
                 </li>
                 <li>
                     <a href="#">
                         <img src="https://raw.githubusercontent.com/hexschool/2022-web-layout-training/6d666caf369e2de99b649ce9fc967d13e36f30b5/2025-week3-4/google.svg" alt="Google">
-                        <p>Google 登入</p>
+                        <p>Google 註冊</p>
                     </a>
                 </li>
         </div>
