--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>index</title>
-    <script type="module" crossorigin src="/Week4/assets/main-C8IkeOsI.js"></script>
-    <link rel="stylesheet" crossorigin href="/Week4/assets/main-BDTBR-UE.css">
+    <script type="module" crossorigin src="/Week4/assets/main-DaPH7HI_.js"></script>
+    <link rel="stylesheet" crossorigin href="/Week4/assets/main-BQICUtVr.css">
   </head>
   <body>
     <div class="header d-flex m0-auto justify-between">
@@ -17,7 +17,7 @@
         </h1>
         <ul class="d-flex gap-40">
             <li><a href="ItemList.html">商品列表</a></li>
-            <li><a href="https://kururu110.github.io/3rdClass/">品牌故事</a></li>
+            <li><a href="Story.html">品牌故事</a></li>
         </ul>
     </div>
     <a href="login.html"><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-person" viewBox="0 0 16 16"><path d="M8 8a3 3 0 1 0 0-6 3 3 0 0 0 0 6m2-3a2 2 0 1 1-4 0 2 2 0 0 1 4 0m4 8c0 1-1 1-1 1H3s-1 0-1-1 1-4 6-4 6 3 6 4m-1-.004c-.001-.246-.154-.986-.832-1.664C11.516 10.68 10.289 10 8 10s-3.516.68-4.168 1.332c-.678.678-.83 1.418-.832 1.664z"/></svg></a>
@@ -81,19 +81,13 @@
         </li>
       </ul>
     </div>
-    <div>
-    </div>
-    <div class="co-branding">
-        <div class="text">
-            <h5>URBNSTEP x Kevin Chen</h5>
+    <div class="banner">
+       <div class="text">
+            <h5><span class="topic-1">URBNSTEP</span><span  class="topic-2"> x </span><span class="topic-1">Kevin Chen</span></h5>
             <h6>跨界聯名，限量發售<h6>
-            <p>新銳漫畫家 Kevin Chen 親自操刀設計，街頭能量全面引爆！</p>
+            <p><span>新銳漫畫家 Kevin Chen 親自操刀設計</span><span class="period">，</span><span>街頭能量全面引爆！</span></p>
             <a href="#">立即搶購</a>
         </div>
-        <picture>
-            <source srcset="https://github.com/hexschool/2022-web-layout-training/blob/main/2025-week3-4/banner-co-branded-sm.png?raw=true" media="(max-width: 768px)">
-            <img src="https://github.com/hexschool/2022-web-layout-training/blob/main/2025-week3-4/banner-co-branded.png?raw=true" alt="主圖片">  
-        </picture>
     </div>
     <div class="series">
       <h5>依系列選購</h5>
@@ -129,32 +123,57 @@
       </ul>
     </div>
     <div class="inspiration">
-        <h5>穿搭靈感</h5>
-        <div class="model">
-            <div class="inspirationLeft">
-                <div>
-                    <img src="https://github.com/hexschool/2022-web-layout-training/blob/main/2025-week3-4/inspiration-1.png?raw=true" class="small-pic" alt="穿搭靈感1">
-                    <img src="https://github.com/hexschool/2022-web-layout-training/blob/main/2025-week3-4/inspiration-2.png?raw=true" class="small-pic" alt="穿搭靈感2">
-                </div>
-                <img src="https://github.com/hexschool/2022-web-layout-training/blob/main/2025-week3-4/inspiration-3.png?raw=true" class="large-pic" alt="穿搭靈感3">
+        <h5>穿搭靈感</h5> 
+        <div class="inspiration-row">
+          <div class="inspiration-col-4">
+            <div class="inspiration-row">
+              <div class="inspiration-col-6">
+                <img src="/Week4/assets/inspiration-1-DfKNOocz.png" alt="穿搭靈感-1">
+              </div>
+              <div class="inspiration-col-6">
+                <img src="/Week4/assets/inspiration-2-BDjDmVQx.png" alt="穿搭靈感-2">
+              </div>
+              <div class="inspiration-col-12 pt-0">
+                <img src="/Week4/assets/inspiration-3-DIOw8vX3.png" alt="穿搭靈感-3">
+              </div>
             </div>
-            <div class="inspirationMiddle">
-                <img src="https://github.com/hexschool/2022-web-layout-training/blob/main/2025-week3-4/inspiration-4.png?raw=true" class="small-pic" alt="穿搭靈感4">
-                <img src="https://github.com/hexschool/2022-web-layout-training/blob/main/2025-week3-4/inspiration-5.png?raw=true" class="small-pic" alt="穿搭靈感5">
-                <img src="https://github.com/hexschool/2022-web-layout-training/blob/main/2025-week3-4/inspiration-6.png?raw=true" class="small-pic" alt="穿搭靈感6">
-                <img src="https://github.com/hexschool/2022-web-layout-training/blob/main/2025-week3-4/inspiration-7.png?raw=true" class="small-pic" alt="穿搭靈感7">
-                <img src="https://github.com/hexschool/2022-web-layout-training/blob/main/2025-week3-4/inspiration-8.png?raw=true" class="small-pic" alt="穿搭靈感8">
-                <img src="https://github.com/hexschool/2022-web-layout-training/blob/main/2025-week3-4/inspiration-9.png?raw=true" class="small-pic" alt="穿搭靈感9">
+          </div>
+          <div class="inspiration-col-4">
+          <div class="inspiration-row">
+            <div class="inspiration-col-6">
+              <img src="/Week4/assets/inspiration-4-CXnBlVsw.png" alt="穿搭靈感-4">
             </div>
-            <div class="inspirationRight">
-                <img src="https://github.com/hexschool/2022-web-layout-training/blob/main/2025-week3-4/inspiration-10.png?raw=true" class="large-pic" alt="穿搭靈感10">
-                <div>
-                    <img src="https://github.com/hexschool/2022-web-layout-training/blob/main/2025-week3-4/inspiration-11.png?raw=true" class="small-pic" alt="穿搭靈感11">
-                    <img src="https://github.com/hexschool/2022-web-layout-training/blob/main/2025-week3-4/inspiration-12.png?raw=true" class="small-pic" alt="穿搭靈感12">
-                </div>
+            <div class="inspiration-col-6">
+              <img src="/Week4/assets/inspiration-5-DqqQzPWa.png" alt="穿搭靈感-5">
             </div>
+            <div class="inspiration-col-6 pt-0">
+              <img src="/Week4/assets/inspiration-6-Dk9lgMEe.png" alt="穿搭靈感-6">
+            </div>
+            <div class="inspiration-col-6 pt-0">
+              <img src="/Week4/assets/inspiration-7-ImmAd34h.png" alt="穿搭靈感-7">
+            </div>
+            <div class="inspiration-col-6 pt-0">
+              <img src="/Week4/assets/inspiration-8-Ann8D3WO.png" alt="穿搭靈感-8">
+            </div>
+            <div class="inspiration-col-6 pt-0">
+              <img src="/Week4/assets/inspiration-9-PBbdk4I8.png" alt="穿搭靈感-9">
+            </div>
+          </div>
+          </div>
+          <div class="inspiration-col-4">
+            <div class="inspiration-row">
+              <div class="inspiration-col-12">
+                <img src="/Week4/assets/inspiration-10-BVOZ4J4I.png" alt="穿搭靈感-10">
+              </div>
+              <div class="inspiration-col-6 pt-0">
+                <img src="/Week4/assets/inspiration-11-DfL9ObnV.png" alt="穿搭靈感-11">
+              </div>
+              <div class="inspiration-col-6 pt-0">
+                <img src="/Week4/assets/inspiration-12-DuuNx5Rt.png" alt="穿搭靈感-12">
+              </div>
+            </div>
+          </div>
         </div>
-        <img src="https://github.com/hexschool/2022-web-layout-training/blob/main/2025-week3-4/inspiration-1.png?raw=true" class="mobile-model" alt="穿搭靈感1">
     </div>
         <div class="discount d-flex gap-40 align-center">
       <p>加入會員取得 9 折優惠</p>
